# keychange

./: Dockerfile  LICENSE  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
examples/: key_detection_demo.py  key_monitor_demo.py  music_production_monitor.py  realtime_key_monitor.py  srt_stream_demo.py
src/: __init__.py  cli.py  keydetector.py  keydetector_cli.py  srt_stream.py  vst_chain.py  vst_stream.py
tests/: conftest.py  generate_test_data.py  mock_vst.py  test_cli_vst.py  test_keydetector.py  test_keydetector_vst.py  test_srt_examples.py  test_vst.py  test_vst_examples.py
